@@ -43,6 +43,7 @@
 #include <dirent.h>
 #include <errno.h>
 #include <getopt.h>
+#include <limits.h>
 #include <mntent.h>
 #include <stdarg.h>
 #include <stdio.h>
@@ -58,6 +59,14 @@
 #include <unistd.h>
 
 char *Version = "@(#)killall5 2.86 31-Jul-2004 miquels@cistron.nl";
+
+#ifndef PATH_MAX
+#  ifdef MAXPATHLEN
+#    define PATH_MAX MAXPATHLEN
+#  else
+#    define PATH_MAX 2048
+#  endif
+#endif
 
 #define STATNAMELEN	15
 #define DO_NETFS 2
